Fixed search form dark mode

--- a/FanTastyFront/src/assets/css/header.component.css
+++ b/FanTastyFront/src/assets/css/header.component.css
@@ -439,6 +439,8 @@ h1 {
   font-size: 14px;
 }
 
+/* START MODAL SEARCH **/
+
 #search-box-model-container.disable {
   display: none;
 }
@@ -457,7 +459,6 @@ h1 {
   color: var(--main-color-light);
   margin-left: 10px;
   justify-content: center;
-  background-color: white;
 }
 
 .search-box-modal-over.disable {
@@ -540,5 +541,5 @@ h1 {
   font-weight: 600;
   background-color: transparent;
 }
-
+/* END MODAL SEARCH **/
   
