--- a/FanTastyFront/src/styles.css
+++ b/FanTastyFront/src/styles.css
@@ -33,6 +33,10 @@ body.dark{
   background-color: #28282B;
   box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
 }
+
+.bg-dark_search-modal{
+  background-color: var(--bg-color-dark);
+}
 .recipe-card{
    background-color: transparent;
   
